controller json body in swagger
