# docs/swagger.json
@@ -16,6 +16,41 @@
         "version": "1.0"
     },
     "paths": {
+        "/user": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Add user"
+                ],
+                "parameters": [
+                    {
+                        "description": "Enter New User Data",
+                        "name": "RegisterNewUser",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User.RegisterForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/user/data": {
             "get": {
                 "security": [
@@ -47,7 +82,6 @@
         },
         "/user/login": {
             "post": {
-                "description": "get the status of server.",
                 "produces": [
                     "application/json"
                 ],
@@ -56,18 +90,13 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "User Name",
-                        "name": "username",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Pass word",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
+                        "description": "enter username and password ,eg. admin , 1234",
+                        "name": "LoginBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User.UserLogin"
+                        }
                     }
                 ],
                 "responses": {
@@ -78,6 +107,39 @@
                             "additionalProperties": true
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "User.RegisterForm": {
+            "type": "object",
+            "properties": {
+                "admin": {
+                    "type": "boolean"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "User.UserLogin": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
